# open-constitution

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  modal_train.py  pyproject.toml
.github/workflows/: ci.yml
activation_probe_mvp/: __init__.py  activations.py  chat.py  data.py  exchange_classifier.py  exchange_classifier_stub.py  exchange_training.py  modeling.py  training.py
data/: README.md  dataset_summary.json  examples.jsonl  training_data.jsonl
open_constitution.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: __init__.py  benchmark_latency.py  guarded_generate.py  prepare_training_data.py  sweep_layers.py  train_exchange_classifier.py  train_probe.py
tests/: test_activations.py  test_chat.py  test_data.py  test_exchange_classifier.py  test_exchange_training.py  test_guarded_generate.py  test_handcrafted_dataset.py  test_modeling.py  test_prepare_training_data.py
